infra/k8s/expiration-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration # este nombre auth coincide con el nombre app de matchLabels del deployment, es para indicar los pods que el deployment va administrar o usar
    spec:
      containers:
        - name: expiration
          image: nrv2391/ticketing-expiration
