infra/k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders # este nombre auth coincide con el nombre app de matchLabels del deployment, es para indicar los pods que el deployment va administrar o usar
    spec:
      containers:
        - name: orders
          image: nrv2391/ticketing-orders
--- # separar la creacion de objetos con 3 guiones
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders # sbaer cual o cuales pods va usar este servicio
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
