infra/k8s/payments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments # este nombre auth coincide con el nombre app de matchLabels del deployment, es para indicar los pods que el deployment va administrar o usar
    spec:
      containers:
        - name: payments
          image: nrv2391/ticketing-payments
--- # separar la creacion de objetos con 3 guiones
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments # sbaer cual o cuales pods va usar este servicio
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
