infra/k8s/tickets-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets # este nombre auth coincide con el nombre app de matchLabels del deployment, es para indicar los pods que el deployment va administrar o usar
    spec:
      containers:
        - name: tickets
          image: nrv2391/ticketing-tickets
--- # separar la creacion de objetos con 3 guiones
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets # sbaer cual o cuales pods va usar este servicio
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
